<resources>
    <string name="app_name">FlashCardApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="create">Create Flash Card</string>
    <string name="your_question">Your Question</string>
    <string name="question">Question:</string>
    <string name="answer">Answer:</string>
    <string name="create_mc_question">Create MC Question</string>
    <string name="create_true_false_question">Create True/False Question</string>
    <string name="study_questions">Study Questions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_answer">Your Answer</string>
    <string name="add_flash_card">Add Flash Card</string>
    <string name="add_to_cards">Add to cards</string>
    <string name="true_answer">true</string>
    <string name="false_answer">false</string>
    <string name="correct_answer">Correct Answer:</string>
    <string name="answer_a">Answer (A) :</string>
    <string name="answer_b">Answer (B) :</string>
    <string name="answer_d">Answer (D) :</string>
    <string name="answer_c">Answer (C) :</string>
    <string name="no_question">Please type in a question</string>
    <string name="no_answer">Please type in an answer</string>
    <string name="no_true_false_answer">Please select an answer</string>
    <string name="add_to_card">Add to Card</string>

    <string-array name="correct_answers_MC_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <string-array name="correct_answers_true_false_array">
        <item>TRUE</item>
        <item>FALSE</item>
    </string-array>
</resources>