<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateFlashCardFragment"
    android:background="#FB5E15">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/flashCardQuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textStyle="bold"
        android:textColor="#2943FF"
        android:layout_marginStart="12dp"
        android:layout_marginTop="200dp"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/flashCardQuestionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="@string/question"
        android:hint="@string/your_question"
        android:paddingStart="24dp"
        android:textColorHint="#2943FF"
        app:layout_constraintTop_toBottomOf="@id/flashCardQuestionText"
        app:layout_constraintStart_toStartOf="@id/flashCardQuestionText"
        />

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#2943FF"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/flashCardQuestionEditText"
        app:layout_constraintStart_toStartOf="@id/flashCardQuestionText"/>

    <EditText
        android:id="@+id/answerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_answer"
        android:autofillHints="@string/your_answer"
        android:inputType="text"
        android:paddingStart="24dp"
        android:textColorHint="#2943FF"
        app:layout_constraintStart_toStartOf="@id/flashCardQuestionEditText"
        app:layout_constraintTop_toBottomOf="@id/answer"
        />

    <Button
        android:id="@+id/addFlashCardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_flash_card"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/answerEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>