<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/OrangeAndBlueTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <Button
        android:id="@+id/addFlashCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/addTrueFalseCard"
        app:layout_constraintEnd_toEndOf="@id/addTrueFalseCard"
        android:text= "@string/create" />

    <Button
        android:id="@+id/addMultipleChoiceCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_mc_question"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/addFlashCard"
        app:layout_constraintStart_toStartOf="@id/addTrueFalseCard"
        app:layout_constraintEnd_toEndOf="@id/addTrueFalseCard"/>

    <Button
        android:id="@+id/addTrueFalseCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_true_false_question"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/addMultipleChoiceCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/studyCurrentQuestions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/study_questions"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/addTrueFalseCard"
        app:layout_constraintStart_toStartOf="@id/addTrueFalseCard"
        app:layout_constraintEnd_toEndOf="@id/addTrueFalseCard"
        />

    <ImageView
        android:id="@+id/flashCardIconImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_icon"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/studyCurrentQuestions"
        />


</androidx.constraintlayout.widget.ConstraintLayout>