<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateMultipleChoiceFragment">


    <TextView
        android:id="@+id/multipleChoiceQuestionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textColor="#2943FF"
        android:layout_marginStart="12dp"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/multipleChoiceQuestionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="@string/question"
        android:hint="@string/your_question"
        android:paddingStart="24dp"
        android:textColorHint="#2943FF"
        app:layout_constraintStart_toStartOf="@id/multipleChoiceQuestionTextView"
        app:layout_constraintTop_toBottomOf="@id/multipleChoiceQuestionTextView"
        />

    <TextView
        android:id="@+id/multipleChoiceAnswerOneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textStyle="bold"
        android:textColor="#2943FF"
        android:layout_marginStart="12dp"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/multipleChoiceQuestionEditText"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/multipleChoiceAnswerOneEditText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:inputType="text"
        android:autofillHints="@string/question"
        android:hint="@string/your_answer"
        android:textColorHint="#2943FF"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/multipleChoiceAnswerOneTextView"
        app:layout_constraintStart_toEndOf="@id/multipleChoiceAnswerOneTextView"
        app:layout_constraintBottom_toBottomOf="@id/multipleChoiceAnswerOneTextView"/>



</androidx.constraintlayout.widget.ConstraintLayout>